gnome-shell.css: fix padding/alignment of menu toggle switches
We do not support scaling background-images, so setting the
toggle-switch size to anything other than the natural size of the
image just results in it getting padding, which makes it look
improperly aligned.

https://bugzilla.gnome.org/show_bug.cgi?id=645647

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -167,8 +167,8 @@ StTooltip StLabel {
 
 /* Switches (to be used in menus) */
 .toggle-switch {
-    width: 4.5em;
-    height: 1.5em;
+    width: 65px;
+    height: 22px;
 }
 
 .toggle-switch-us {
